infrastructure/dex/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800  # 3 hours
